--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=http://27.125.172.55/mediawiki">
     <title>Redirecting...</title>
+    <script type="text/javascript" src="redirect.js"></script>
 </head>
-<body>
-        <h1>Redirecting...</h1>
-        <p>If you are not redirected, <a href="/mediawiki">click here</a>.</p>
+<body>\
+    <h1>Redirecting...</h1>
+    <p>If you are not redirected, <a href="http://<YOUR_LOCAL_SERVER_IP>/mediawiki/">click here</a>.</p>
 </body>
 </html>
-~                                                                                                                       ~                                                                                                                       ~                                                                                                                       ~                                    
