--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@
 </head>
 <body>\
     <h1>Redirecting...</h1>
-    <p>If you are not redirected, <a href="http://<YOUR_LOCAL_SERVER_IP>/mediawiki/">click here</a>.</p>
+    <p>If you are not redirected, <a href="http://27.125.172.55/">click here</a>.</p>
 </body>
 </html>
