--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <title>Redirecting...</title>
     <script type="text/javascript" src="redirect.js"></script>
 </head>
-<body>\
+<body>
     <h1>Redirecting...</h1>
     <p>If you are not redirected, <a href="http://27.125.172.55/">click here</a>.</p>
 </body>
