--- a/404.html
+++ b/404.html
@@ -8,9 +8,8 @@
       var ip = '27.125.172.55';
       var path = window.location.pathname.replace(/^\/wikIGCSE/, '');
       path = decodeURIComponent(path);
-      var target = 'http://' + ip + '/mediawiki/index.php/' + path;
-      window.location.replace(target);
-      window.location.replace('http://'+ip);
+      window.location.replace( 'http://' + ip + '/mediawiki/index.php/' + path);
+      //window.location.replace('http://'+ip);
     })();
   </script>
 </head>
